Fix purchase step whitespace by hiding inactive elements

--- a/scss/components/_book-3d.scss
+++ b/scss/components/_book-3d.scss
@@ -372,6 +372,10 @@
   flex-direction: column;
   justify-content: center;
 
+  [hidden] {
+    display: none !important;
+  }
+
   .buy-controls {
     display: flex;
     flex-direction: column;
